- Appease IDEs that want to monkeypatch the thread module by changing a   testing pattern.  With any luck, the following will no longer be a problem:   http://devnet.jetbrains.net/thread/433486

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,12 @@
+Next release
+------------
+
+- Add ``setup.py dev`` and ``setup.py docs`` aliases.
+
+- Appease IDEs that want to monkeypatch the thread module by changing a
+  testing pattern.  With any luck, the following will no longer be a problem:
+  http://devnet.jetbrains.net/thread/433486
+
 0.8.1 (2012-02-13)
 ------------------
 
